--- a/models/staging/jaffle_shop/src_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/src_jaffle_shop.yml
@@ -4,6 +4,7 @@ sources:
     - name: jaffle_shop
       description: A clone of a Postgres application database.
       database: raw
+      schema: jaffle_shop_original
       tables:
         - name: customers
           description: Raw customers data.
