--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -3,5 +3,6 @@ version: 2
 sources:
     - name: stripe
       database: raw
+      schema: jaffle_shop_original
       tables:
         - name: payment
