project.yml commits

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,6 +35,7 @@ models:
     staging:
       +materialized: view
     marts:
+      # +required_tests: {"relationship.*": 1}
       core:
-        +required_tests: {"unique.*|not_null": 2}
+      #   +required_tests: {"unique.*|not_null"}
         +materialized: table
